[gd_scene load_steps=5 format=3 uid="uid://df1flad2eitct"]

[ext_resource type="Script" path="res://Scripts/latte_art.gd" id="1_e3hmb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.95, 0.95, 0.95, 1)
corner_radius_top_left = 210
corner_radius_top_right = 210
corner_radius_bottom_right = 210
corner_radius_bottom_left = 210

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.35, 0.2, 0.12, 1)
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 210.0

[node name="LatteArtGame" type="Node2D"]
script = ExtResource("1_e3hmb")

[node name="Background" type="ColorRect" parent="."]
offset_right = 950.0
offset_bottom = 519.0
color = Color(0.658824, 0.521569, 0.415686, 1)

[node name="CupArea" type="Node2D" parent="."]
clip_children = 1
position = Vector2(466, 227)

[node name="CupRim" type="Panel" parent="CupArea"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -210.0
offset_right = 210.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="CupCoffee" type="Panel" parent="CupArea"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="CupMask" type="Area2D" parent="CupArea"]

[node name="CupShape" type="CollisionShape2D" parent="CupArea/CupMask"]
shape = SubResource("CircleShape2D_1")

[node name="PatternLine" type="Line2D" parent="."]
width = 25.0
default_color = Color(0.9, 0.85, 0.8, 0.4)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="PlayerLine" type="Line2D" parent="."]
width = 20.0
default_color = Color(0.95, 0.9, 0.85, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 32.0
offset_top = 32.0
offset_right = 192.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="TimeLabel" type="Label" parent="."]
offset_left = 776.0
offset_top = 21.0
offset_right = 936.0
offset_bottom = 55.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Time: 30"

[node name="Instructions" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 212.0
offset_top = 464.0
offset_right = 712.0
offset_bottom = 498.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Trace the pattern to create latte art!"
horizontal_alignment = 1

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(947, 518)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
